--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "notarealdb": "^0.2.2"
   }
 }
